--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-numpy==2.2.4
-pandas==2.2.3
+numpy==2.3.1
+pandas==2.3.1
+PyQt6==6.9.1
+PyQt6-Qt6==6.9.1
+PyQt6_sip==13.10.2
 python-dateutil==2.9.0.post0
-pytz==2025.1
+pytz==2025.2
 regex==2024.11.6
 six==1.17.0
-tzdata==2025.1
+tzdata==2025.2
