--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,9 @@ jobs:
   
       - name: Build executable
         run: pyinstaller --onefile main.py
+
+      - name: Current directory
+        run: ls -l
   
       - name: Rename executable
         run: |
