--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,23 +30,23 @@ jobs:
         run: pip install -r requirements.txt
   
       - name: Build executable
-        run: pyinstaller --onefile main.py
+        run: pyinstaller --onefile --add-data res/courseFinals.json:res/ main.py
   
       - name: Rename executable
         run: |
           if [[ "$RUNNER_OS" == "Windows" ]]; then
-            mv dist/main.exe dist/app-windows.exe
+            mv dist/main.exe dist/Finals-Scheduler-windows.exe
           elif [[ "$RUNNER_OS" == "Linux" ]]; then
-            mv dist/main dist/app-linux
+            mv dist/main dist/Finals-Scheduler-linux
           elif [[ "$RUNNER_OS" == "macOS" ]]; then
-            mv dist/main dist/app-macos
+            mv dist/main dist/Finals-Scheduler-macos
           fi
         shell: bash
   
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: app-${{ matrix.os }}
+          name: Finals-Scheduler-${{ matrix.os }}
           path: dist/*
 
   publish:
@@ -63,7 +63,7 @@ jobs:
           merge-multiple: true
 
       - name: Make files executable (Linux/Mac)
-        run: chmod +x app-* || true
+        run: chmod +x Finals-Scheduler-* || true
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
@@ -73,8 +73,8 @@ jobs:
           draft: true
           prerelease: false
           files: |
-            app-linux
-            app-windows.exe
-            app-macos
+            Finals-Scheduler-linux
+            Finals-Scheduler-windows.exe
+            Finals-Scheduler-macos
 
     
